<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            style="@style/TitleStyle"
            android:text="@string/title" />

        <LinearLayout style="@style/QuestionLayoutStyle">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question_1" />

            <CheckBox
                android:id="@+id/answer_1_1"
                style="@style/AnswerStyle"
                android:text="@string/answer_1_1" />

            <CheckBox
                android:id="@+id/answer_1_2"
                style="@style/AnswerStyle"
                android:text="@string/answer_1_2" />

            <CheckBox
                android:id="@+id/answer_1_3"
                style="@style/AnswerStyle"
                android:text="@string/answer_1_3" />

            <CheckBox
                android:id="@+id/answer_1_4"
                style="@style/AnswerStyle"
                android:text="@string/answer_1_4" />
        </LinearLayout>

        <LinearLayout style="@style/QuestionLayoutStyle">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/radioGroup_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_2_1"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_2_1" />

                <RadioButton
                    android:id="@+id/answer_2_2"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_2_2" />

                <RadioButton
                    android:id="@+id/answer_2_3"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_2_3" />

                <RadioButton
                    android:id="@+id/answer_2_4"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_2_4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout style="@style/QuestionLayoutStyle">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question_3" />

            <RadioGroup
                android:id="@+id/radioGroup_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_3_1"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_3_1" />

                <RadioButton
                    android:id="@+id/answer_3_2"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_3_2" />

                <RadioButton
                    android:id="@+id/answer_3_3"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_3_3" />

                <RadioButton
                    android:id="@+id/answer_3_4"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_3_4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout style="@style/QuestionLayoutStyle">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question_4" />

            <TextView
                style="@style/CommentStyle"
                android:text="@string/question_4_comment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/answer_4"
                    style="@style/EditTextStyle"
                    android:hint="@string/answer_4_hint"
                    android:inputType="number" />

                <TextView
                    style="@style/CommentStyle"
                    android:text="@string/question_4_unit" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/QuestionLayoutStyle">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question_5" />

            <CheckBox
                android:id="@+id/answer_5_1"
                style="@style/AnswerStyle"
                android:text="@string/answer_5_1" />

            <CheckBox
                android:id="@+id/answer_5_2"
                style="@style/AnswerStyle"
                android:text="@string/answer_5_2" />

            <CheckBox
                android:id="@+id/answer_5_3"
                style="@style/AnswerStyle"
                android:text="@string/answer_5_3" />

            <CheckBox
                android:id="@+id/answer_5_4"
                style="@style/AnswerStyle"
                android:text="@string/answer_5_4" />
        </LinearLayout>

        <LinearLayout style="@style/QuestionLayoutStyle">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question_6" />

            <RadioGroup
                android:id="@+id/radioGroup_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_6_1"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_6_1" />

                <RadioButton
                    android:id="@+id/answer_6_2"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_6_2" />

                <RadioButton
                    android:id="@+id/answer_6_3"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_6_3" />

                <RadioButton
                    android:id="@+id/answer_6_4"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_6_4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout style="@style/QuestionLayoutStyle">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question_7" />

            <RadioGroup
                android:id="@+id/radioGroup_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_7_1"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_7_1" />

                <RadioButton
                    android:id="@+id/answer_7_2"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_7_2" />

                <RadioButton
                    android:id="@+id/answer_7_3"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_7_3" />

                <RadioButton
                    android:id="@+id/answer_7_4"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_7_4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout style="@style/QuestionLayoutStyle">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question_8" />

            <RadioGroup
                android:id="@+id/radioGroup_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_8_1"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_8_1" />

                <RadioButton
                    android:id="@+id/answer_8_2"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_8_2" />

                <RadioButton
                    android:id="@+id/answer_8_3"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_8_3" />

                <RadioButton
                    android:id="@+id/answer_8_4"
                    style="@style/AnswerStyle"
                    android:text="@string/answer_8_4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout style="@style/QuestionLayoutStyle">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question_9" />

            <CheckBox
                android:id="@+id/answer_9_1"
                style="@style/AnswerStyle"
                android:text="@string/answer_9_1" />

            <CheckBox
                android:id="@+id/answer_9_2"
                style="@style/AnswerStyle"
                android:text="@string/answer_9_2" />

            <CheckBox
                android:id="@+id/answer_9_3"
                style="@style/AnswerStyle"
                android:text="@string/answer_9_3" />

            <CheckBox
                android:id="@+id/answer_9_4"
                style="@style/AnswerStyle"
                android:text="@string/answer_9_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonStyle"
                android:onClick="check"
                android:text="@string/check_button" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="reset"
                android:text="@string/reset_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>